채팅방 관련 서비스는 완료